# paper-search

./: README.md  pyproject.toml
src/: server.py
src/paper_mcp/: server.py
